--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "esnext"
     ],
     "allowJs": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "noEmit": true,
     "strict": true,
     "esModuleInterop": true,
