--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "esnext"
     ],
     "allowJs": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "noEmit": true,
     "strict": true,
     "esModuleInterop": true,
@@ -20,5 +20,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
